--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <h1>Canadian Museum of Art</h1>
         <div class="image-text-container">
-            <img src="images/MarkRothco.jpg" alt="Mark Rothco Artwork" class="header-image">
+            <img src="MarkRothco.jpg" alt="Mark Rothco Artwork" class="header-image">
             <p class="image-text">Mark Rothco Exhibition, 2025.</p>
     </main>
 
