--- a/artists.html
+++ b/artists.html
@@ -25,7 +25,7 @@
         <div class="gallery">
             <!-- Artwork 1 -->
             <div class="artwork">
-                <img src="images/procession.jpg" alt="Procession at Sainte-Famille" class="gallery-image">
+                <img src="procession.jpg" alt="Procession at Sainte-Famille" class="gallery-image">
                 <div class="artwork-info">
                     <h2>ANDRÉ BIÉLER</h2>
                     <p>Procession at Sainte-Famille, 1929</p>
@@ -34,7 +34,7 @@
 
             <!-- Artwork 2 -->
             <div class="artwork">
-                <img src="images/two-cats.jpg" alt="Two Cats" class="gallery-image">
+                <img src="two-cats.jpg" alt="Two Cats" class="gallery-image">
                 <div class="artwork-info">
                     <h2>JEAN-BAPTISTE OUDRY</h2>
                     <p>Two Cats, 1725</p>
@@ -43,7 +43,7 @@
 
             <!-- Artwork 3 -->
         <div class="artwork">
-            <img src="images/poplars.jpg" alt="Poplars by a Lake" class="gallery-image">
+            <img src="poplars.jpg" alt="Poplars by a Lake" class="gallery-image">
             <div class="artwork-info">
                 <h2>TOM THOMSON</h2>
                 <p>Poplars by a Lake, 1916</p>
@@ -52,7 +52,7 @@
 
             <!-- Artwork 4 -->
             <div class="artwork">
-                <img src="images/greenblue.jpg" alt="Green and Blue" class="gallery-image">
+                <img src="greenblue.jpg" alt="Green and Blue" class="gallery-image">
                 <div class="artwork-info">
                     <h2>MARK ROTHKO</h2>
                     <p>Green and Blue, 1969</p>
@@ -61,7 +61,7 @@
 
             <!-- Artwork 5 -->
             <div class="artwork">
-                <img src="images/nikko.jpg" alt="The Road to Nikko" class="gallery-image">
+                <img src="nikko.jpg" alt="The Road to Nikko" class="gallery-image">
                 <div class="artwork-info">
                     <h2>KAWASE HASUI</h2>
                     <p>The Road to Nikko, 1930</p>
@@ -70,7 +70,7 @@
 
             <!-- Artwork 6 -->
             <div class="artwork">
-                <img src="images/sargent.jpg" alt="Carnation, Lily, Lily, Rose" class="gallery-image">
+                <img src="sargent.jpg" alt="Carnation, Lily, Lily, Rose" class="gallery-image">
                 <div class="artwork-info">
                     <h2>JOHN SINGER SARGENT</h2>
                     <p>Carnation, Lily, Lily, Rose, 1885</p>
@@ -79,7 +79,7 @@
 
             <!-- Artwork 7 -->
             <div class="artwork">
-                <img src="images/pass.jpg" alt="The Padre Pass near Bhadarwah" class="gallery-image">
+                <img src="pass.jpg" alt="The Padre Pass near Bhadarwah" class="gallery-image">
                 <div class="artwork-info">
                     <h2>SAMUEL BOURNE</h2>
                     <p>The Padre Pass near Bhadarwah, 1864</p>
@@ -88,7 +88,7 @@
 
             <!-- Artwork 8 -->
             <div class="artwork">
-                <img src="images/church.jpg" alt="The Church at Auvers" class="gallery-image">
+                <img src="church.jpg" alt="The Church at Auvers" class="gallery-image">
                 <div class="artwork-info">
                     <h2>VINCENT VAN GOGH</h2>
                     <p>The Church at Auvers, 1890</p>
@@ -97,7 +97,7 @@
 
             <!-- Artwork 9 -->
             <div class="artwork">
-                <img src="images/yayoi.jpg" alt="Pumpkins" class="gallery-image">
+                <img src="yayoi.jpg" alt="Pumpkins" class="gallery-image">
                 <div class="artwork-info">
                     <h2>YAYOI KUSAMA</h2>
                     <p>Pumpkins, 2016</p>
