--- a/confirm.html
+++ b/confirm.html
@@ -51,7 +51,7 @@
     <a href="index.html" class="home-link">Home</a>
     <div class="logo">CMoA</div>
     <div class="confirmation-container">
-        <img src="images/hi.jpg" alt="Salvador Dali Artwork" class="header-image">
+        <img src="hi.jpg" alt="Salvador Dali Artwork" class="header-image">
         <p>Don't forget to stop by the gift shop!</p>
         <h1>Booking Confirmed!</h1>
         <p>Get ready for your visit to the Canadian Museum of Art</p>
