--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-        <img src="images/moma.jpg" alt="Image" class="contact-image">
+        <img src="moma.jpg" alt="Image" class="contact-image">
 
             <!-- Contact Information -->
             <div class="contact-container">
