--- a/tickets.html
+++ b/tickets.html
@@ -73,7 +73,7 @@
         
         <div class="container">
             <div class="image-container">
-                <img src="images/kids.jpg" alt="Museum Image">
+                <img src="kids.jpg" alt="Museum Image">
             </div>
             
             <div class="calendar-section">
